[gd_scene load_steps=13 format=3 uid="uid://dngytsjlmkfg7"]

[ext_resource type="Script" uid="uid://dpbmowgfmnxe5" path="res://addons/gaea/editor/panel/panel.gd" id="1_afcqa"]
[ext_resource type="Script" uid="uid://bedt1m4gyyvyv" path="res://addons/gaea/editor/graph_editor/graph_edit.gd" id="2_cdav6"]
[ext_resource type="Script" uid="uid://baefugcjynjnx" path="res://addons/gaea/editor/file_list/menu_bar.gd" id="2_ce5k6"]
[ext_resource type="Script" uid="uid://c46nsvak6wb61" path="res://addons/gaea/editor/file_list/file_system_container.gd" id="2_eht7w"]
[ext_resource type="Script" uid="uid://coi2pynbl5ehe" path="res://addons/gaea/editor/graph_editor/create_node_tree.gd" id="2_vpeaa"]
[ext_resource type="Script" uid="uid://pu63c0ci8rtv" path="res://addons/gaea/editor/file_list/file_context_menu.gd" id="3_gbl2m"]
[ext_resource type="Script" uid="uid://yi4fevtlrk41" path="res://addons/gaea/editor/graph_editor/main_editor.gd" id="4_gbl2m"]
[ext_resource type="Script" uid="uid://bybvolyg1u0v4" path="res://addons/gaea/editor/graph_editor/node_context_menu.gd" id="4_vtsfx"]
[ext_resource type="Script" uid="uid://cqd2rkam5cs3d" path="res://addons/gaea/editor/graph_editor/create_node_popup.gd" id="5_nbnm7"]
[ext_resource type="Script" uid="uid://btt4eqjkp5pyf" path="res://addons/gaea/editor/graph_editor/link_context_menu.gd" id="7_dhpru"]
[ext_resource type="PackedScene" uid="uid://dcec3sivqmbjf" path="res://addons/gaea/editor/panel/about_window.tscn" id="9_affj1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dhpru"]

[node name="GaeaPanel" type="HSplitContainer" node_paths=PackedStringArray("main_editor", "graph_edit", "file_list")]
custom_minimum_size = Vector2(0, 256)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afcqa")
main_editor = NodePath("MainEditor")
graph_edit = NodePath("MainEditor/GraphEdit")
file_list = NodePath("FileSystemContainer")

[node name="FileSystemContainer" type="VBoxContainer" parent="." node_paths=PackedStringArray("graph_edit", "main_editor", "menu_bar", "file_list", "context_menu", "file_dialog")]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("2_eht7w")
graph_edit = NodePath("../MainEditor/GraphEdit")
main_editor = NodePath("../MainEditor")
menu_bar = NodePath("MenuBar")
file_list = NodePath("FileList")
context_menu = NodePath("FileList/ContextMenu")
file_dialog = NodePath("FileDialog")

[node name="MenuBar" type="MenuBar" parent="FileSystemContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
script = ExtResource("2_ce5k6")

[node name="File" type="PopupMenu" parent="FileSystemContainer/MenuBar"]
oversampling_override = 1.0

[node name="RecentFiles" type="PopupMenu" parent="FileSystemContainer/MenuBar/File"]

[node name="FileList" type="ItemList" parent="FileSystemContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true

[node name="ContextMenu" type="PopupMenu" parent="FileSystemContainer/FileList"]
script = ExtResource("3_gbl2m")

[node name="FileDialog" type="FileDialog" parent="FileSystemContainer"]
title = "Save Graph As..."
size = Vector2i(960, 540)
mode_overrides_title = false
filters = PackedStringArray("*.tres;Resource Files")

[node name="MainEditor" type="Control" parent="." node_paths=PackedStringArray("gaea_panel", "graph_edit", "about_window", "create_node_popup", "node_context_menu", "link_context_menu")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_gbl2m")
gaea_panel = NodePath("..")
graph_edit = NodePath("GraphEdit")
about_window = NodePath("AboutWindow")
create_node_popup = NodePath("CreateNodePopup")
node_context_menu = NodePath("NodeContextMenu")
link_context_menu = NodePath("LinkContextMenu")

[node name="GraphEdit" type="GraphEdit" parent="MainEditor" node_paths=PackedStringArray("main_editor", "bottom_note_label")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/connection_rim_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
grid_pattern = 1
right_disconnects = true
minimap_opacity = 0.85
show_zoom_label = true
script = ExtResource("2_cdav6")
main_editor = NodePath("..")
bottom_note_label = NodePath("Margin/BottomNote")

[node name="Margin" type="MarginContainer" parent="MainEditor/GraphEdit"]
z_index = 50
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="BottomNote" type="RichTextLabel" parent="MainEditor/GraphEdit/Margin"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_dhpru")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dhpru")
theme_override_styles/background = SubResource("StyleBoxEmpty_dhpru")
theme_override_styles/fill = SubResource("StyleBoxEmpty_dhpru")
text = "(0,0)"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="AboutWindow" parent="MainEditor" node_paths=PackedStringArray("main_editor") instance=ExtResource("9_affj1")]
visible = false
exclusive = true
main_editor = NodePath("..")

[node name="CreateNodePopup" type="Window" parent="MainEditor" node_paths=PackedStringArray("main_editor", "create_node_panel", "search_bar", "tool_button", "tool_popup", "create_node_tree", "description_label", "cancel_button")]
oversampling_override = 1.0
title = "Create Node"
position = Vector2i(0, 36)
size = Vector2i(300, 450)
visible = false
transient = true
exclusive = true
extend_to_title = true
keep_title_visible = true
script = ExtResource("5_nbnm7")
main_editor = NodePath("..")
create_node_panel = NodePath("BackgroundContainer/CreateNodePanel")
search_bar = NodePath("MainContentContainer/VBox/SearchContainer/SearchBar")
tool_button = NodePath("MainContentContainer/VBox/SearchContainer/ToolButton")
tool_popup = NodePath("MainContentContainer/VBox/SearchContainer/ToolButton/ToolPopup")
create_node_tree = NodePath("MainContentContainer/VBox/CreateNodeTree")
description_label = NodePath("MainContentContainer/VBox/PanelContainer/DescriptionLabel")
cancel_button = NodePath("MainContentContainer/VBox/HBoxContainer/CancelButton")

[node name="BackgroundContainer" type="MarginContainer" parent="MainEditor/CreateNodePopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -10
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = -10
theme_override_constants/margin_bottom = -10

[node name="CreateNodePanel" type="Panel" parent="MainEditor/CreateNodePopup/BackgroundContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MainContentContainer" type="MarginContainer" parent="MainEditor/CreateNodePopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MainEditor/CreateNodePopup/MainContentContainer"]
layout_mode = 2

[node name="SearchContainer" type="HBoxContainer" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search (Ctrl+Tab to cycle)"
clear_button_enabled = true

[node name="ToolButton" type="Button" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox/SearchContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"FlatButton"
icon_alignment = 1

[node name="ToolPopup" type="PopupMenu" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox/SearchContainer/ToolButton"]
oversampling_override = 1.0
position = Vector2i(255, 80)
size = Vector2i(108, 62)
item_count = 3
item_0/text = "Expand All"
item_0/id = 0
item_1/text = "Collapse All"
item_1/id = 1
item_2/text = "Reload Tree"
item_2/id = 2

[node name="CreateNodeTree" type="Tree" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox" node_paths=PackedStringArray("main_editor", "description_label")]
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("2_vpeaa")
main_editor = NodePath("../../../..")
description_label = NodePath("../PanelContainer/DescriptionLabel")

[node name="Label" type="Label" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox"]
layout_mode = 2
text = "Description"

[node name="PanelContainer" type="PanelContainer" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox/PanelContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
bbcode_enabled = true
text = "Description of the selected node goes here"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="CreateButton" type="Button" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[node name="CancelButton" type="Button" parent="MainEditor/CreateNodePopup/MainContentContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="NodeContextMenu" type="PopupMenu" parent="MainEditor" node_paths=PackedStringArray("main_editor", "graph_edit")]
oversampling_override = 1.0
size = Vector2i(100, 124)
item_count = 6
item_0/text = "Add Node"
item_0/id = 0
item_1/id = 1
item_1/separator = true
item_2/text = "Delete"
item_2/id = 2
item_3/id = 9999
item_3/separator = true
item_4/text = "Rename"
item_4/id = 3
item_4/disabled = true
item_5/text = "Set Color"
item_5/id = 5
script = ExtResource("4_vtsfx")
main_editor = NodePath("..")
graph_edit = NodePath("../GraphEdit")

[node name="LinkContextMenu" type="PopupMenu" parent="MainEditor" node_paths=PackedStringArray("main_editor")]
oversampling_override = 1.0
size = Vector2i(106, 100)
item_count = 1
item_0/text = "Disconnect"
item_0/id = 0
script = ExtResource("7_dhpru")
main_editor = NodePath("..")

[connection signal="about_popup_request" from="MainEditor" to="MainEditor/AboutWindow" method="_on_main_editor_about_popup_request"]
[connection signal="visibility_changed" from="MainEditor" to="MainEditor/GraphEdit" method="_on_main_editor_visibility_changed"]
[connection signal="connection_from_empty" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_connection_from_empty"]
[connection signal="connection_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_connection_request"]
[connection signal="connection_to_empty" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_connection_to_empty"]
[connection signal="copy_nodes_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_copy_nodes_request"]
[connection signal="cut_nodes_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_cut_nodes_request"]
[connection signal="delete_nodes_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_duplicate_nodes_request"]
[connection signal="graph_elements_linked_to_frame_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_graph_elements_linked_to_frame_request"]
[connection signal="gui_input" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_gui_input"]
[connection signal="paste_nodes_request" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_paste_nodes_request"]
[connection signal="scroll_offset_changed" from="MainEditor/GraphEdit" to="MainEditor/GraphEdit" method="_on_scroll_offset_changed"]
[connection signal="text_changed" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/SearchContainer/SearchBar" to="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" method="_on_search_bar_text_changed"]
[connection signal="text_submitted" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/SearchContainer/SearchBar" to="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" method="_on_search_bar_text_submitted"]
[connection signal="pressed" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/SearchContainer/ToolButton" to="MainEditor/CreateNodePopup" method="_on_tool_button_pressed"]
[connection signal="id_pressed" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/SearchContainer/ToolButton/ToolPopup" to="MainEditor/CreateNodePopup" method="_on_tool_popup_id_pressed"]
[connection signal="item_activated" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" to="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" method="_on_item_activated"]
[connection signal="item_selected" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" to="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" method="_on_item_selected"]
[connection signal="nothing_selected" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" to="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" method="_on_nothing_selected"]
[connection signal="pressed" from="MainEditor/CreateNodePopup/MainContentContainer/VBox/HBoxContainer/CreateButton" to="MainEditor/CreateNodePopup/MainContentContainer/VBox/CreateNodeTree" method="_on_create_button_pressed"]
